--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -18,7 +18,7 @@
 
         <td><%= pluralize(topic.votes.count, "vote") %></td>
         <td><%= button_to '+1', upvote_topic_path(topic),method: :post %></td>
-
+        <td><%= button_to '-1', downvote_topic_path(topic),method: :delete %></td>
         <td><%= link_to 'Delete', topic, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
@@ -28,3 +28,5 @@
 <br>
 
 <%= link_to 'New Topic', new_topic_path %>
+<br>
+<%= link_to 'About', about_path %>
